--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,5 +4,9 @@ DB_NAME=cloudproof
 DB_USER=postgres
 DB_PASSWORD=your_password
 
+# Auth & credentials encryption
+SECRET_KEY=your-secret-key-change-in-production
+CREDENTIALS_ENCRYPTION_KEY=base64-32-byte-key-or-passphrase
+
 AWS_REGION=us-east-1
 CLOUDPROOF_ACCOUNT_ID=your_account_id
