--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "axios": "^1.6.0",
-    "react-calendar-heatmap": "^1.9.0",
+    "react": "^18.2.0",
+    "react-calendar-heatmap": "^1.10.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.13.1",
+    "react-scripts": "5.0.1",
     "react-tooltip": "^5.25.0"
   },
   "scripts": {
